# civita

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: Cargo.toml
benches/src/: common.rs  main.rs
benches/src/common/: config.rs  contants.rs  ipc.rs
cli/: Cargo.toml
cli/src/: main.rs  validator.rs
core/: Cargo.toml
core/benches/: dag_benchmark.rs  trie_benchmark.rs
core/src/: block.rs  chain_config.rs  config.rs  consensus.rs  constants.rs  crypto.rs  event.rs  lib.rs  network.rs  proposal.rs  resident.rs  traits.rs  ty.rs  utils.rs  validator.rs
core/src/block/: tree.rs
core/src/consensus/: block.rs  engine.rs  graph.rs  hot_stuff.rs  proposal.rs  proposal_pool.rs  randomizer.rs  synchronizer.rs  tree.rs  validator.rs
core/src/consensus/block/: tree.rs
core/src/consensus/block/tree/: block_node.rs  checkpoint.rs  dag.rs  node.rs  proposal_node.rs
core/src/consensus/block/tree/node/: block_node.rs  proposal_node.rs
core/src/consensus/engine/: bootstraper.rs
core/src/consensus/graph/: entry.rs  reason.rs  storage.rs
core/src/consensus/hot_stuff/: engine.rs
core/src/consensus/tree/: reason.rs
core/src/crypto/: ec.rs  hasher.rs  traits.rs
core/src/crypto/ec/: public_key.rs  secret_key.rs  signature.rs  vrf.rs
core/src/crypto/ec/hash_to_curve/map_to_curve/: simple_swu.rs
core/src/crypto/ec/vrf/: challenge_generator.rs
core/src/crypto/traits/: hasher.rs  public_key.rs  secret_key.rs  vrf.rs
core/src/network/: behaviour.rs  cache_storage.rs  gossipsub.rs  request_response.rs  storage.rs  transport.rs
core/src/network/gossipsub/: network.rs
core/src/network/request_response/: network.rs
core/src/network/storage/: local_multi.rs  local_one.rs  network.rs
core/src/network/transport/: inner.rs  network.rs
core/src/network/transport/network/: config.rs  error.rs
core/src/resident/: record.rs
core/src/traits/serializable/: b_tree_map.rs  b_tree_set.rs  box_.rs  hash_map.rs  message_id.rs  multihash.rs  peer_id.rs  string.rs  tuple.rs  vec.rs
core/src/ty/: atom.rs  command.rs  snapshot.rs  token.rs
core/src/utils/: bi_channel.rs  mmr.rs  mpt.rs  record.rs  split_file.rs  storage.rs  trie.rs
core/src/utils/mpt/: node.rs
core/src/utils/storage/: reader.rs  sst_reader.rs
core/src/utils/trie/: node.rs  record.rs  storage.rs
core/tests/: consensus_engine.rs
core/tests/common/: config.rs  constants.rs  mod.rs  transport.rs  validator.rs
serialize/: Cargo.toml
serialize-derive/: Cargo.toml
serialize-derive/src/: attribute.rs  enum_impl.rs  fields_handler.rs  lib.rs  struct_impl.rs
serialize/src/: implements.rs  lib.rs
serialize/src/implements/: ark_secp256k1.rs  array.rs  b_tree.rs  bigint.rs  bool.rs  box_.rs  hash_map.rs  hash_set.rs  libp2p.rs  numeric.rs  option.rs  string.rs  tuple.rs  vec.rs
src/: behaviour.rs  committee.rs  community.rs  consensus.rs  constants.rs  core.rs  crypto.rs  identity.rs  lib.rs  mocks.rs  network.rs  proposal.rs  proposal_pool.rs  resident.rs  resident_record.rs  traits.rs  utils.rs  vrf_elector.rs
src/committee/: builder.rs  config.rs  election.rs  elector.rs  info.rs  message_channels.rs  pending_election.rs  signature_collector.rs  state.rs  timer.rs  vrf_elector.rs
src/committee/elector/: config.rs  context.rs  dkg_generator.rs
src/community/: community_id.rs  info.rs
src/consensus/: hot_stuff.rs  proof_result.rs  proposal_pool.rs  randomizer.rs  signed_result.rs  vrf_elector.rs
src/consensus/hot_stuff/: chain.rs  elector.rs  engine.rs  proposal_pool.rs  utils.rs  view.rs
src/consensus/proposal_pool/: member_manager.rs  proposal_collector.rs  signature_collector.rs  vote_manager.rs
src/core/: community.rs  community_id.rs  network.rs  resident.rs  resident_network.rs  vrf.rs
src/crypto/: core.rs  dkg.rs  ec.rs  error.rs  hash_to_curve.rs  index_map.rs  keypair.rs  keypair_.rs  pedersen.rs  peer_registry.rs  primitives.rs  service.rs  signature.rs  traits.rs  tss.rs  types.rs  vrf.rs  vss.rs
src/crypto/algebra/: point.rs  scalar.rs
src/crypto/core/: element.rs
src/crypto/dkg/: classic.rs  joint_feldman.rs  signature.rs  vss.rs
src/crypto/ec/: base_config.rs  hash_to_curve.rs  public_key.rs  secret_key.rs  serialize_affine.rs  serialize_size.rs  signature.rs  suite_implements.rs  vrf.rs
src/crypto/hash_to_curve/: clear_cofactor.rs  expand_message_xmd.rs  hash_to_field.rs  iso_map.rs  map_to_curve.rs  utils.rs
src/crypto/keypair/: ecies.rs  secp256k1.rs
src/crypto/primitives/: algebra.rs  threshold.rs  vss.rs
src/crypto/service/: vrf.rs
src/crypto/threshold/: counter.rs
src/crypto/traits/: hasher.rs  public_key.rs  secret_key.rs  signature.rs  suite.rs  vrf.rs
src/crypto/tss/: schnorr.rs
src/crypto/types/: dst.rs
src/crypto/vrf/: config.rs  consensus_process.rs  crypto.rs  dvrf.rs  messager.rs  process.rs  processes.rs  proof.rs
src/crypto/vss/: decrypted_share.rs  encrypted_share.rs
src/identity/: resident_id.rs
src/mocks/: mock_error.rs
src/network/: behaviour.rs  cache_storage.rs  connection.rs  connection_manager.rs  dhash_map.rs  discovery_service.rs  gossipsub.rs  headrbeat_service.rs  kad.rs  message.rs  message_layer.rs  message_type.rs  p2p_behaviour.rs  p2p_communication.rs  record.rs  request_response.rs  resident_network.rs  storage.rs  traits.rs  transport.rs
src/network/dhash_map/: node.rs
src/network/gossipsub/: network.rs
src/network/message/: gossipsub.rs  request_response.rs
src/network/storage/: local_multi.rs  local_one.rs  network.rs
src/network/traits/: gossipsub.rs  storage.rs  transport.rs
src/proposal/: collector.rs  pool.rs  publisher.rs  system.rs  vrf_elector.rs
src/resident/: builder.rs  info.rs  malicious_behaviour.rs  record.rs  requation_action.rs  resident_id.rs  resident_status.rs  role.rs
src/traits/: byteable.rs  serializable.rs
src/utils/: consensus_collector.rs  indexed_map.rs  mpt.rs  timer.rs
src/utils/mpt/: keys.rs  (+3 more)
tests/: dkg_classic.rs  joint_feldman.rs  schnorr.rs
tests/common/: dkg_classic.rs  joint_feldman.rs  mod.rs  schnorr.rs  transport.rs
(+126 files in other folders)
