[package]
name = "civita"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.55", features = [
  "identify",
  "macros",
  "kad",
  "tcp",
  "tokio",
  "noise",
  "yamux",
  "request-response",
  "gossipsub",
  "serde",
  "cbor",
] }
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
sha2 = "0.9" # Required by curv-kzen, can't upgrade
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
dashmap = "6.1"
log = "0.4"
rand = "0.9"
curv-kzen = "0.10"
bincode = { version = "2.0", features = ["serde"] }
mockall = { version = "0.13", features = ["nightly"] }
async-trait = "0.1"
ecies = "0.2"

[dev-dependencies]
tempfile = "3.17"
