[workspace]
members = ["core", "serialize", "serialize-derive"]
resolver = "2"

[workspace.package]
name = "civita"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
civita-core = { path = "./core" }
civita-serialize = { path = "./serialize" }
civita-serialize-derive = { path = "./serialize-derive" }
