[package]
name = "civita-benches"
version.workspace = true
edition.workspace = true
default-run = "main"

[dependencies]
civita-core = { workspace = true }
tokio = { version = "1", features = ["full"] }
tempfile = "3.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
log4rs = "1.4"
clap = { version = "4.5", features = ["derive"] }
libp2p = { version = "0.56", features = ["secp256k1"] }

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "node_runner"
path = "src/bin/node_runner.rs"
