[package]
name = "civita-core"
version.workspace = true
edition.workspace = true

[dependencies]
libp2p = { version = "0.56", features = [
  "identify",
  "macros",
  "kad",
  "tcp",
  "tokio",
  "noise",
  "yamux",
  "gossipsub",
  "secp256k1",
  "request-response",
  "cbor",
  "serde",
] }
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
dashmap = "6.1"
log = "0.4"
derivative = "2.2"
vdf = "0.1"
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0", features = ["serde"] }
multihash = { version = "0.19", features = ["serde"] }
multihash-derive = "0.9"
multihash-codetable = { version = "0.1", features = ["sha2", "sha3", "blake3"] }

[dev-dependencies]
