[package]
name = "civita-serialize"
version.workspace = true
edition.workspace = true

[features]
libp2p = ["dep:libp2p"]
ark-secp256k1 = ["dep:ark-secp256k1", "dep:ark-serialize"]
bigint = ["dep:num-bigint"]

[dependencies]
libp2p = { version = "0.56", optional = true }
ark-secp256k1 = { version = "0.5", default-features = false, optional = true }
ark-serialize = { version = "0.5", default-features = false, optional = true }
num-bigint = { version = "0.4", optional = true }
